assets/css/main.css
* {
    margin: 0;
    padding: 0;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
    background-color: #2d3436;
    color: #b2bec3; /* #dfe6e9 */
}
/* #2d3436 */

.container {
    display: grid;
    grid-template-areas:
        "header header header"
        "toolbar editor inspector";
    grid-template-rows: 15vh 85vh;
    grid-template-columns: 3rem 1fr 15rem;
}

/* HEADER */
header {
    grid-area: header;
    background-color: #636e72;
    box-shadow: 0 1px #2d3436;
    z-index: 2;
}

/* TOOLBAR */
.toolbar {
    grid-area: toolbar;
    background-color: #636e72;
}
.toolbar-tools {
    text-decoration: none;
    padding: .25em;
}
.toolbar-tools > li {
    padding: .75em;
    border-radius: .25em;
    border-style: solid;
    border-width: 1px;
    border-color: #636e72;
    text-align: center;
}
.toolbar-tools > li:hover {
    border-color: #b2bec3;
}
.toolbar-tools > li.tool-active {
    color: #dfe6e9;
}
.tool {
    position: relative;
}
.tool .tooltip {
    visibility: hidden;
    top: .625em;
    left: 105%;
    width: 120px;
    background-color: #fff;
    color: black;
    text-align: center;
    padding: .125em 0;
    border-radius: 6px;
    opacity: .6;
    
    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;
}

.tool:hover .tooltip {
    visibility: visible;
    height: 1em;
}
.tool .tooltip::after {
    content: " ";
    position: absolute;
    top: 50%;
    right: 100%; /* To the left of the tooltip */
    margin-top: -.25em;
    border-width: .25em;
    border-style: solid;
    border-color: transparent #fff transparent transparent;
}

.tool-tile {
    position: absolute;
    bottom: 0;
}
.tool-tile-select {
    position: relative;
    padding: .35em;
}
.tile-select {
    width: 1.5em;
    height: 1.5em;
    background-image: url();
    border: .125em solid #b2bec3;
}
.tile-select-swap {
    font-size: .625em;
    margin-bottom: -1.125em;
}
.tile-select-primary {
    margin-left: .75em;
}
.tile-select-secondary {
    margin-top: -1em;
}

/* EDITOR */
.editor {
    grid-area: editor;
    overflow: auto;
}
.editor > .window {
    position: relative;
    width: auto;
    height: auto;
}

#editor {
    margin: 64vh;
}

.editor > .window > canvas {
    border: 1.5px solid #636e72;
}

/* INSPECTOR */
.inspector {
    grid-area: inspector;
    background-color: #636e72;
}
.inspector > .layers {
    padding: 2px;
}
.inspector > .layers > .layers-list {
    list-style: none;
    width: 1fr;
    border-top: 1px solid#b2bec3;
}
.inspector > .layers > .layers-list > .layers-list_layer {
    width: 1fr;
    border-bottom: 1px solid #b2bec3;
}
.inspector > .layers > .layers-list > .active {
    background-color: #2d3436;
}
.inspector > .layers > .layers-list > .layers-list_layer > a {
    width: 1.5rem;
    padding: .5rem;
    text-decoration: none;
    color: #b2bec3;
}
.inspector > .layers > .layers-list > .layers-list_layer > a:hover {
    color: #dfe6e9;
}
.inspector > .layers > .layers-list > .layers-list_layer > a > * {
    font-size: 1.5rem;
    line-height: 1.5rem;
}
.inspector > .layers > .layers-list > .layers-list_layer > span {
    font-size: 1.5rem;
    line-height: 2.5rem;
    border-left: 1px solid #b2bec3;
    padding-left: .5rem;
}

/* EXTRAS */
button {
    color: #636e72;
    border: 1px solid #636e72;
    background-color: #2d3436;
    border-radius: 1vh;
}
button:hover {
    color: #b2bec3;
    border: 1px solid #b2bec3;
}
button:active {
    color: #b2bec3;
    border: 1px solid #b2bec3;
    background-color: #636e72;
}

